--- a/Fraud_Detection.ipynb
+++ b/Fraud_Detection.ipynb
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a3122ce2",
+   "id": "289453b3",
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b6eb318",
+   "id": "77ea5bf7",
    "metadata": {},
    "source": [
     "#### Check and remove duplicated data"
@@ -478,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cac183f8",
+   "id": "801adf4f",
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "17fc0dde",
+   "id": "cee6eb32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f81f77bc",
+   "id": "cc6efdf1",
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40e4273f",
+   "id": "772558d0",
    "metadata": {},
    "source": [
     "#### Print the ratio of fraud vs non fraud cases"
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f4cb6f8",
+   "id": "ed2a8aea",
    "metadata": {},
    "source": [
     "#### Distribution of transaction amounts for fraudulent versus non-fraudulent transactions"
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ccdc72c4",
+   "id": "36485318",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95f03708",
+   "id": "bb4e19b7",
    "metadata": {},
    "source": [
     "#### Splitting orignial data into the training/testing sets"
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eaf41a6f",
+   "id": "ef091897",
    "metadata": {},
    "source": [
     "#### Resampling using SMOTE"
@@ -722,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "aeb4c318",
+   "id": "0a8e01b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,11 +732,7 @@
     "\n",
     "# Combine resampled features and target into a new DataFrame\n",
     "df_resampled = pd.DataFrame(X_resampled, columns=X.columns)\n",
-    "df_resampled['Class'] = y_resampled\n",
-    "\n",
-    "# Split the resampled data into fraudulent and non-fraudulent transactions\n",
-    "fraudulent_resampled = df_resampled[df_resampled['Class'] == 1]\n",
-    "non_fraudulent_resampled = df_resampled[df_resampled['Class'] == 0]"
+    "df_resampled['Class'] = y_resampled"
    ]
   },
   {
@@ -762,7 +758,7 @@
     "# Print the value_counts on the original labels y\n",
     "print(pd.value_counts(pd.Series(y)))\n",
     "\n",
-    "# Print the value_counts\n",
+    "# Print the value_counts on resampled data\n",
     "print(pd.value_counts(pd.Series(y_resampled)))"
    ]
   },
@@ -789,15 +785,12 @@
    ],
    "source": [
     "def plot_data_bar(X, y):\n",
-    "    # Count the occurrences of each class\n",
     "    unique, counts = np.unique(y, return_counts=True)\n",
     "    counts_dict = dict(zip(unique, counts))\n",
     "    \n",
-    "    # Set up the labels and values for the bar graph\n",
     "    labels = ['Class #0', 'Class #1']\n",
     "    values = [counts_dict.get(0, 0), counts_dict.get(1, 0)]\n",
-    "    \n",
-    "    # Create the bar graph\n",
+    "  \n",
     "    plt.bar(labels, values, color=['blue', 'red'], alpha=0.5)\n",
     "    plt.xlabel('Classes')\n",
     "    plt.ylabel('Number of Instances')\n",
@@ -810,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "3fbc163b",
+   "id": "a3cc9e46",
    "metadata": {},
    "outputs": [
     {
@@ -849,8 +842,10 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "d01eeee3",
-   "metadata": {},
+   "id": "8c981ea0",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -886,37 +881,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "ad43fe53",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "99.83328986416473\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Count the total number of observations from the length of y\n",
-    "total_obs = len(y)\n",
-    "\n",
-    "# Count the total number of non-fraudulent observations \n",
-    "non_fraud = [i for i in y if i == 0]\n",
-    "count_non_fraud = non_fraud.count(0)\n",
-    "\n",
-    "# Calculate the percentage of non fraud observations in the dataset\n",
-    "percentage = (float(count_non_fraud)/float(total_obs)) * 100\n",
-    "\n",
-    "# Print the percentage: this is our \"natural accuracy\" by doing nothing\n",
-    "print(percentage)"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "18dbb00a",
+   "id": "84abfb0a",
    "metadata": {},
    "source": [
     "## MODEL ANAYSIS"
@@ -924,7 +890,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c72cf16",
+   "id": "8fae9516",
    "metadata": {},
    "source": [
     "#### Pipeline for Logistic Regression"
@@ -945,7 +911,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d9398ab",
+   "id": "6b63c92f",
    "metadata": {},
    "source": [
     "#### Obtain the results from the classification report and confusion matrix "
@@ -954,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "3edf1f55",
+   "id": "470420e0",
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "7ceb5047",
+   "id": "1bf2d93e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,7 +965,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "494bd1f7",
+   "id": "02a4edc8",
    "metadata": {},
    "outputs": [
     {
@@ -1032,7 +998,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7c64635",
+   "id": "56295d1d",
    "metadata": {},
    "source": [
     "#### Pipeline for Random Forest"
@@ -1149,7 +1115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fba826f",
+   "id": "c7bf75d9",
    "metadata": {},
    "source": [
     "#### Obtain the results from the classification report and confusion matrix "
@@ -1186,7 +1152,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "8861ab20",
+   "id": "50e6645f",
    "metadata": {},
    "outputs": [
     {
@@ -1243,7 +1209,7 @@
     "from sklearn.model_selection import GridSearchCV\n",
     "# Define new parameters for Random Forest\n",
     "param_grid = {\n",
-    "    'rf__n_estimators': [10, 30],  # Increased lower bound from 1 to 10 for practicality\n",
+    "    'rf__n_estimators': [10, 30], \n",
     "    'rf__max_features': ['auto', 'log2'],\n",
     "    'rf__max_depth': [4, 8],\n",
     "    'rf__criterion': ['gini', 'entropy']\n",
@@ -1258,7 +1224,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "946bc4ac",
+   "id": "2820d95a",
    "metadata": {},
    "outputs": [
     {
@@ -1290,13 +1256,13 @@
    ],
    "source": [
     "# Update the pipeline with optimal parameters\n",
-    "pipeline_rf.set_params(**grid_search.best_params_)\n"
+    "pipeline_rf.set_params(**grid_search.best_params_)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "db5e1e3a",
+   "id": "c8940601",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1307,7 +1273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b309cee0",
+   "id": "c8da6c1e",
    "metadata": {},
    "source": [
     "#### Obtain the results from the classification report and confusion matrix "
@@ -1316,7 +1282,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "0d9fb86b",
+   "id": "6461851b",
    "metadata": {},
    "outputs": [
     {
@@ -1344,7 +1310,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "2e0cf385",
+   "id": "25d985c6",
    "metadata": {
     "scrolled": true
    },
@@ -1404,7 +1370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e7f7c93",
+   "id": "a01c9301",
    "metadata": {},
    "source": [
     "#### Pipeline for XGboost Classifier"
@@ -1413,7 +1379,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "ac4b2867",
+   "id": "6c91a828",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1429,7 +1395,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "0706ef6a",
+   "id": "c69307d1",
    "metadata": {},
    "outputs": [
     {
@@ -1449,7 +1415,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "467ac771",
+   "id": "25af4c46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1471,7 +1437,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "aeaa7dea",
+   "id": "00431169",
    "metadata": {},
    "outputs": [
     {
@@ -1501,7 +1467,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "f5875678",
+   "id": "7688d370",
    "metadata": {},
    "outputs": [
     {
@@ -1522,7 +1488,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "ad95d6c9",
+   "id": "61bc2a19",
    "metadata": {},
    "outputs": [
     {
@@ -1548,7 +1514,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "eb497029",
+   "id": "c604f8a3",
    "metadata": {},
    "outputs": [
     {
@@ -1594,10 +1560,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import the package\n",
     "from sklearn.ensemble import VotingClassifier \n",
     "\n",
-    "# Define the three classifiers to use in the ensemble\n",
     "clf1 = LogisticRegression(class_weight={0:1, 1:15}, random_state=5)\n",
     "clf2 = RandomForestClassifier(class_weight={0:1, 1:12}, criterion='gini', max_depth=8, max_features='log2',\n",
     "            min_samples_leaf=10, n_estimators=30, n_jobs=-1, random_state=5)\n",
@@ -1624,7 +1588,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "5838cc0d",
+   "id": "694288d1",
    "metadata": {},
    "outputs": [
     {
@@ -1636,7 +1600,6 @@
     }
    ],
    "source": [
-    "# Fit the pipeline to the training data\n",
     "pipeline_ensemble.fit(X_train, y_train)\n",
     "predicted_ensemble = pipeline_ensemble.predict(X_test)\n",
     "\n",
@@ -1647,7 +1610,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "27534c0e",
+   "id": "092b0634",
    "metadata": {},
    "outputs": [
     {
@@ -1717,7 +1680,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac06ee52",
+   "id": "51f2569c",
    "metadata": {},
    "source": [
     "#### Model Matrix Summary"
@@ -1762,7 +1725,6 @@
     }
    ],
    "source": [
-    "# Confusion matrices\n",
     "conf_matrices = {\n",
     "    'Logistic Regression': np.array([[83390, 1599], [16, 113]]),\n",
     "    'Random Forest': np.array([[84968, 21], [28, 101]]),\n",
@@ -1793,7 +1755,7 @@
     "        'F1 Score': f1\n",
     "    }\n",
     "\n",
-    "# Display the results\n",
+    "\n",
     "for model_name, metric_values in metrics.items():\n",
     "    print(f\"{model_name}:\")\n",
     "    print(f\"  Recall: {metric_values['Recall']:.2%}\")\n",
@@ -1805,7 +1767,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "fcc2fa5c",
+   "id": "25e4c4d2",
    "metadata": {},
    "outputs": [
     {
@@ -1820,7 +1782,6 @@
     }
    ],
    "source": [
-    "# Prepare data for visualization\n",
     "models = list(metrics.keys())\n",
     "recall = [metrics[model]['Recall'] * 100 for model in models]\n",
     "precision = [metrics[model]['Precision'] * 100 for model in models]\n",
@@ -1838,14 +1799,12 @@
     "# Melt the DataFrame for seaborn\n",
     "df_melted = df.melt(id_vars=['Model'], value_vars=['Recall', 'Precision', 'F1 Score'], var_name='Metric', value_name='Value')\n",
     "\n",
-    "# Set the aesthetic style of the plots\n",
     "sns.set_style(\"whitegrid\")\n",
     "\n",
-    "# Create a grouped bar chart\n",
+    "# Creating a grouped bar chart\n",
     "plt.figure(figsize=(14, 8))\n",
     "ax = sns.barplot(x='Model', y='Value', hue='Metric', data=df_melted, palette='Set2')\n",
     "\n",
-    "# Add value labels on top of the bars\n",
     "for p in ax.patches:\n",
     "    ax.annotate(f'{p.get_height():.2f}%', \n",
     "                (p.get_x() + p.get_width() / 2., p.get_height()), \n",
@@ -1853,20 +1812,18 @@
     "                xytext = (0, 9), \n",
     "                textcoords = 'offset points')\n",
     "\n",
-    "# Set titles and labels\n",
     "plt.title('Performance Metrics of Different Models')\n",
     "plt.xlabel('Model')\n",
     "plt.ylabel('Percentage')\n",
     "plt.legend(title='Metric')\n",
     "\n",
-    "# Show the plot\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1be18109",
+   "id": "9ef5c2a7",
    "metadata": {},
    "source": [
     "#### Calculating potential savings from prevented fraud and compare it to losses from undetected fraudulent transactions."
@@ -1875,7 +1832,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "a388610b",
+   "id": "49fd2883",
    "metadata": {},
    "outputs": [
     {
@@ -1911,7 +1868,7 @@
     "\n",
     "    return potential_savings, losses_from_undetected_fraud, total_fraud_amount\n",
     "\n",
-    "# Assuming you have the actual labels and predictions from your model\n",
+    "\n",
     "y_true = y_test\n",
     "y_pred = predicted_xgb  # Model predictions\n",
     "\n",
@@ -1927,7 +1884,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "2f7b2182",
+   "id": "b1911f3a",
    "metadata": {},
    "outputs": [
     {
@@ -1956,7 +1913,6 @@
     "plt.title('Financial Impact of Fraud Detection')\n",
     "plt.gca().add_artist(plt.Circle((0,0), 0.70, fc='white'))\n",
     "\n",
-    "# Save the donut chart as a high-resolution image file\n",
     "#plt.savefig('high_res_donut_chart.png', dpi=300)\n",
     "plt.show()"
    ]
@@ -1971,7 +1927,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aad786e0",
+   "id": "801fbeb2",
    "metadata": {},
    "source": [
     "Logistic Regression has the highest recall (87.60%), meaning it catches more fraudulent transactions. However, its precision is very low (6.6%), indicating many false positives.\n",
