--- a/Fraud_Detection.ipynb
+++ b/Fraud_Detection.ipynb
@@ -707,7 +707,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Split your data X and y, into a training and a test set and fit the pipeline onto the training data\n",
+    "# Spliting data, into a training and a test set and fit the pipeline onto the training data\n",
     "X_train, X_test, y_train, y_test, amounts_train, amounts_test= train_test_split(X, y,amounts, test_size=0.3, random_state=0)"
    ]
   },
